--- a/app/src/main/res/layout/fragment_mainchildshopcar_accurate.xml
+++ b/app/src/main/res/layout/fragment_mainchildshopcar_accurate.xml
@@ -15,13 +15,12 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/iv_shopcar_advertisement"
+            <com.jude.rollviewpager.RollPagerView
+                android:id="@+id/rv_shopcar_advertisement"
                 android:layout_width="match_parent"
-                android:layout_height="226dp"
-                android:background="#91deca">
+                android:layout_height="226dp">
 
-            </ImageView>
+            </com.jude.rollviewpager.RollPagerView>
 
             <LinearLayout
                 android:id="@+id/ll_shopcaraccurate_title"
