--- a/app/src/main/res/layout/item_orderformslw_state.xml
+++ b/app/src/main/res/layout/item_orderformslw_state.xml
@@ -48,104 +48,126 @@
             android:layout_width="match_parent"
             android:layout_height="100dp">
 
-            <ImageView
-                android:id="@+id/iv_orderformslw_photo"
-                android:layout_width="91dp"
-                android:layout_height="91dp"
-                android:layout_centerVertical="true"
-                android:src="@mipmap/stand" />
-
-            <LinearLayout
+            <RelativeLayout
+                android:id="@+id/rl_orderfromslw_show"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="11dp"
-                android:layout_marginTop="13dp"
-                android:layout_toRightOf="@+id/iv_orderformslw_photo"
-                android:orientation="vertical">
+                android:layout_height="100dp">
 
-                <TextView
-                    android:id="@+id/tv_orderformslw_servicetype"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="上门衣橱管理服务"
-                    android:textColor="#666666"
-                    android:textSize="15sp" />
+                <ImageView
+                    android:id="@+id/iv_orderformslw_photo"
+                    android:layout_width="91dp"
+                    android:layout_height="91dp"
+                    android:layout_centerVertical="true"
+                    android:src="@mipmap/stand" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="7dp"
-                    android:orientation="horizontal">
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="11dp"
+                    android:layout_marginTop="13dp"
+                    android:layout_toRightOf="@+id/iv_orderformslw_photo"
+                    android:orientation="vertical">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:id="@+id/tv_orderformslw_servicetype"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="尺码"
+                        android:text="上门衣橱管理服务"
                         android:textColor="#666666"
                         android:textSize="15sp" />
 
-                    <TextView
-                        android:id="@+id/tv_orderformslw_size"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:text="Z"
-                        android:textColor="#666666"
-                        android:textSize="15sp" />
+                        android:layout_marginTop="7dp"
+                        android:orientation="horizontal">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:text="颜色"
-                        android:textColor="#666666"
-                        android:textSize="15sp" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="尺码"
+                            android:textColor="#666666"
+                            android:textSize="15sp" />
 
-                    <TextView
-                        android:id="@+id/tv_orderformslw_color"
-                        android:layout_width="wrap_content"
+                        <TextView
+                            android:id="@+id/tv_orderformslw_size"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
+                            android:text="Z"
+                            android:textColor="#666666"
+                            android:textSize="15sp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="20dp"
+                            android:text="颜色"
+                            android:textColor="#666666"
+                            android:textSize="15sp" />
+
+                        <TextView
+                            android:id="@+id/tv_orderformslw_color"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
+                            android:text="黑色"
+                            android:textColor="#666666"
+                            android:textSize="15sp" />
+                    </LinearLayout>
+
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:text="黑色"
-                        android:textColor="#666666"
-                        android:textSize="15sp" />
+                        android:layout_marginTop="8dp">
+
+                        <TextView
+                            android:id="@+id/tv_orderformslw_price"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="498"
+                            android:textColor="#ac0000"
+                            android:textSize="18sp" />
+
+                        <TextView
+                            android:id="@+id/tv_orderformslw_coupon"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_alignBaseline="@+id/tv_orderformslw_price"
+                            android:layout_alignParentEnd="true"
+                            android:layout_marginRight="74dp"
+                            android:text="未使用优惠券及折扣"
+                            android:textColor="#999999"
+                            android:textSize="15sp" />
+                    </RelativeLayout>
+
                 </LinearLayout>
 
-
-                <RelativeLayout
+                <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp">
+                    android:layout_height="1dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_toRightOf="@+id/iv_orderformslw_photo"
+                    android:background="#979494" />
+            </RelativeLayout>
 
-                    <TextView
-                        android:id="@+id/tv_orderformslw_price"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="498"
-                        android:textColor="#ac0000"
-                        android:textSize="18sp" />
-
-                    <TextView
-                        android:id="@+id/tv_orderformslw_coupon"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_alignBaseline="@+id/tv_orderformslw_price"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginRight="74dp"
-                        android:text="未使用优惠券及折扣"
-                        android:textColor="#999999"
-                        android:textSize="15sp" />
-                </RelativeLayout>
-
-            </LinearLayout>
-
-            <TextView
+            <HorizontalScrollView
+                android:id="@+id/hs_ofderformslw_show"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_alignParentBottom="true"
-                android:layout_toRightOf="@+id/iv_orderformslw_photo"
-                android:background="#979494" />
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:id="@+id/ll_ofderformslw_show"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#000"
+                    android:orientation="horizontal">
+
+                </LinearLayout>
+            </HorizontalScrollView>
         </RelativeLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
