--- a/app/src/main/res/layout/vp_home_open.xml
+++ b/app/src/main/res/layout/vp_home_open.xml
@@ -1,18 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="160dp">
+    android:layout_width="match_parent"
+    android:layout_height="51dp"
+    android:orientation="vertical">
+
     <ImageView
         android:id="@+id/iv_vphome_open"
-        android:src="@mipmap/ic_launcher"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-    <TextView
-        android:id="@+id/tv_vphome_weather"
-        android:text="天气预报"
-        android:textSize="50sp"
-        android:textColor="#000"
-        android:layout_centerInParent="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="51dp"
+        android:scaleType="centerCrop" />
 </RelativeLayout>
