--- a/app/src/main/res/layout/item_orderformslw_state.xml
+++ b/app/src/main/res/layout/item_orderformslw_state.xml
@@ -24,7 +24,7 @@
                 android:id="@+id/tv_orderformslw_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="哈哈我变形了"
+                android:text="------"
                 android:textColor="#ac0000"
                 android:textSize="12sp" />
 
@@ -32,11 +32,13 @@
                 android:id="@+id/tv_orderformslw_state"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
                 android:layout_marginRight="11dp"
-                android:text="已支付"
+                android:text="------"
                 android:textColor="#ac0000"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:layout_alignTop="@+id/tv_orderformslw_id"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="11dp" />
         </RelativeLayout>
 
         <TextView
@@ -72,7 +74,7 @@
                         android:id="@+id/tv_orderformslw_servicetype"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="上门衣橱管理服务"
+                        android:text="------"
                         android:textColor="#666666"
                         android:textSize="15sp" />
 
@@ -94,7 +96,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="5dp"
-                            android:text="Z"
+                            android:text="--"
                             android:textColor="#666666"
                             android:textSize="15sp" />
 
@@ -111,7 +113,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="5dp"
-                            android:text="黑色"
+                            android:text="------"
                             android:textColor="#666666"
                             android:textSize="15sp" />
                     </LinearLayout>
@@ -126,7 +128,7 @@
                             android:id="@+id/tv_orderformslw_price"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="498"
+                            android:text="--"
                             android:textColor="#ac0000"
                             android:textSize="18sp" />
 
@@ -136,8 +138,8 @@
                             android:layout_height="match_parent"
                             android:layout_alignBaseline="@+id/tv_orderformslw_price"
                             android:layout_alignParentEnd="true"
-                            android:layout_marginRight="74dp"
-                            android:text="未使用优惠券及折扣"
+                            android:layout_marginRight="44dp"
+                            android:text="---"
                             android:textColor="#999999"
                             android:textSize="15sp" />
                     </RelativeLayout>
@@ -155,13 +157,14 @@
             <HorizontalScrollView
                 android:id="@+id/hs_ofderformslw_show"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true">
 
                 <LinearLayout
                     android:id="@+id/ll_ofderformslw_show"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="#000"
                     android:orientation="horizontal">
 
                 </LinearLayout>
@@ -180,7 +183,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
-                android:text="预约时间：2018年4月4日"
+                android:text="------"
                 android:textColor="#666666"
                 android:textSize="15sp" />
 
@@ -191,42 +194,48 @@
                 android:layout_marginTop="4dp"
                 android:ellipsize="end"
                 android:lines="1"
-                android:text="预约地址：2018年4月4日"
+                android:text="------"
                 android:textColor="#666666"
                 android:textSize="15sp" />
         </LinearLayout>
     </LinearLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="34dp"
+        android:layout_height="46dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="31dp"
         android:orientation="horizontal"
+        android:paddingBottom="12dp"
         android:paddingLeft="10dp"
         android:paddingRight="11dp">
 
         <TextView
             android:id="@+id/tv_orderformslw_button1"
-            android:layout_width="0dp"
+            android:layout_width="100dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="@drawable/shape_buttonround_red"
+            android:gravity="center"
             android:textColor="#fff" />
 
         <TextView
             android:id="@+id/tv_orderformslw_button2"
-            android:layout_width="0dp"
+            android:layout_width="100dp"
             android:layout_height="match_parent"
-            android:layout_marginLeft="17dp"
+            android:layout_centerHorizontal="true"
             android:layout_weight="1"
+            android:background="@drawable/shape_buttonround_red"
+            android:gravity="center"
             android:textColor="#fff" />
 
         <TextView
             android:id="@+id/tv_orderformslw_button3"
-            android:layout_width="0dp"
+            android:layout_width="100dp"
             android:layout_height="match_parent"
-            android:layout_marginLeft="17dp"
+            android:layout_alignParentEnd="true"
             android:layout_weight="1"
+            android:background="@drawable/shape_buttonround_red"
+            android:gravity="center"
             android:textColor="#fff" />
-    </LinearLayout>
+    </RelativeLayout>
 </RelativeLayout>   
