--- a/app/src/main/res/layout/activity_order_form_details.xml
+++ b/app/src/main/res/layout/activity_order_form_details.xml
@@ -25,21 +25,22 @@
 
 
     <ScrollView
+        android:id="@+id/sc"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <RelativeLayout
-            android:id="@+id/rl_orderformorder_state"
             android:layout_width="match_parent"
-            android:layout_height="480dp"
-            android:background="#f7f4f4">
+
+            android:layout_height="match_parent"
+            android:background="#fff">
 
             <LinearLayout
+                android:id="@+id/ll"
                 android:layout_width="match_parent"
-                android:layout_height="475dp"
+                android:layout_height="match_parent"
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="5dp"
-                android:background="#fff"
                 android:orientation="vertical"
                 android:paddingLeft="10dp">
 
@@ -280,38 +281,40 @@
                     android:textSize="15sp" />
             </LinearLayout>
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="34dp"
-                android:layout_alignParentBottom="true"
-                android:layout_marginBottom="37dp"
+                android:layout_height="46dp"
+                android:layout_below="@+id/ll"
+                android:layout_marginTop="5dp"
                 android:orientation="horizontal"
+                android:paddingBottom="12dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="11dp">
 
                 <TextView
                     android:id="@+id/tv_orderformdetails_button1"
-                    android:layout_width="0dp"
+                    android:layout_width="100dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:background="@drawable/shape_buttonround_red"
                     android:textColor="#fff" />
 
                 <TextView
                     android:id="@+id/tv_orderformdetails_button2"
-                    android:layout_width="0dp"
+                    android:layout_width="100dp"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="17dp"
-                    android:layout_weight="1"
+                    android:layout_centerHorizontal="true"
+                    android:background="@drawable/shape_buttonround_red"
                     android:textColor="#fff" />
 
                 <TextView
                     android:id="@+id/tv_orderformdetails_button3"
-                    android:layout_width="0dp"
+                    android:layout_width="100dp"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="17dp"
-                    android:layout_weight="1"
+                    android:layout_alignParentEnd="true"
+                    android:background="@drawable/shape_buttonround_red"
                     android:textColor="#fff" />
-            </LinearLayout>
+
+            </RelativeLayout>
         </RelativeLayout>
     </ScrollView>
 </LinearLayout>
