--- a/app/src/main/res/layout/activity_ordershopcar_details.xml
+++ b/app/src/main/res/layout/activity_ordershopcar_details.xml
@@ -32,6 +32,7 @@
         android:textColor="#ccc" />
 
     <ScrollView
+        android:id="@+id/sv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
@@ -121,14 +122,14 @@
                 android:layout_height="2dp"
                 android:textColor="#ccc" />
 
-            <com.example.huichuanyi.custom.MyListView
+            <ListView
                 android:id="@+id/mlw_show"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:divider="#00000000"
                 android:layout_marginTop="10dp">
 
-            </com.example.huichuanyi.custom.MyListView>
+            </ListView>
 
             <RelativeLayout
                 android:id="@+id/rl_order_details_pay_what"
