--- a/app/src/main/res/layout/item_orderformorder_state.xml
+++ b/app/src/main/res/layout/item_orderformorder_state.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rl_orderformorder_state"
     android:layout_width="match_parent"
     android:layout_height="266dp"
-    android:id="@+id/rl_orderformorder_state"
     android:background="#f7f4f4">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="261dp"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
         android:background="#fff"
         android:orientation="vertical"
         android:paddingLeft="10dp"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true">
+        android:id="@+id/linearLayout2">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -143,36 +144,46 @@
         </LinearLayout>
     </LinearLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="34dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="14dp"
+        android:layout_height="46dp"
+        android:paddingBottom="12dp"
         android:orientation="horizontal"
         android:paddingLeft="10dp"
-        android:paddingRight="11dp">
+        android:paddingRight="11dp"
+        android:weightSum="3"
+        android:layout_alignBottom="@+id/linearLayout2"
+        android:layout_alignParentStart="true">
 
         <TextView
             android:id="@+id/tv_orderformstate_button1"
-            android:layout_width="0dp"
-            android:textColor="#fff"
+            android:layout_width="100dp"
             android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:background="@drawable/shape_buttonround_red"
+            android:gravity="center"
+            android:textColor="#fff" />
 
         <TextView
             android:id="@+id/tv_orderformstate_button2"
-            android:layout_width="0dp"
+            android:layout_width="100dp"
             android:layout_height="match_parent"
-            android:layout_marginLeft="17dp"
-            android:textColor="#fff"
-            android:layout_weight="1" />
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="1"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/shape_buttonround_red"
+            android:gravity="center"
+            android:textColor="#fff" />
 
         <TextView
             android:id="@+id/tv_orderformstate_button3"
-            android:layout_width="0dp"
+            android:layout_width="100dp"
             android:layout_height="match_parent"
-            android:layout_marginLeft="17dp"
-            android:textColor="#fff"
-            android:layout_weight="1" />
-    </LinearLayout>
+            android:layout_alignParentEnd="true"
+            android:layout_gravity="end"
+            android:layout_weight="1"
+            android:background="@drawable/shape_buttonround_red"
+            android:gravity="center"
+            android:textColor="#fff" />
+    </RelativeLayout>
 </RelativeLayout>   
