--- a/app/src/main/res/layout/item_shopcarself_type2.xml
+++ b/app/src/main/res/layout/item_shopcarself_type2.xml
@@ -73,35 +73,48 @@
             android:textColor="#ac0000"
             android:textSize="18sp" />
 
-        <LinearLayout
-            android:id="@+id/ll_shopcartype1_count"
+        <RelativeLayout
             android:layout_width="91dp"
-            android:visibility="gone"
             android:layout_height="30dp"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:background="@mipmap/hm_main_shopcar_count"
-            android:orientation="horizontal">
+            android:layout_alignParentEnd="true">
+
+            <LinearLayout
+                android:id="@+id/ll_shopcartype1_count"
+                android:layout_width="91dp"
+                android:layout_height="30dp"
+                android:visibility="gone"
+                android:background="@mipmap/hm_main_shopcar_count"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_shocarself_delete"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1" />
+
+                <TextView
+                    android:id="@+id/tv_shocarself_count"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center" />
+
+                <TextView
+                    android:id="@+id/tv_shocarself_add"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1" />
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/tv_shocarself_delete"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
+                android:id="@+id/tv_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:textColor="#ac0000" />
+        </RelativeLayout>
 
-            <TextView
-                android:id="@+id/tv_shocarself_count"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center" />
-
-            <TextView
-                android:id="@+id/tv_shocarself_add"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
-        </LinearLayout>
     </RelativeLayout>
 
 </RelativeLayout>
