--- a/app/src/main/res/layout/item_shopcarself_type3.xml
+++ b/app/src/main/res/layout/item_shopcarself_type3.xml
@@ -76,35 +76,45 @@
                 android:text="-----"
                 android:textColor="#ac0000"
                 android:textSize="18sp" />
-
-            <LinearLayout
-                android:id="@+id/ll_shopcartype3_count"
-                android:layout_width="91dp"
-                android:layout_height="30dp"
+            <RelativeLayout
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"
-                android:background="@mipmap/hm_main_shopcar_count"
-                android:orientation="horizontal">
+                android:layout_width="91dp"
+                android:layout_height="30dp">
+                <LinearLayout
+                    android:id="@+id/ll_shopcartype3_count"
+                    android:layout_width="91dp"
+                    android:layout_height="30dp"
+                    android:background="@mipmap/hm_main_shopcar_count"
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/tv_shocarselftype3_delete"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
+                    <TextView
+                        android:id="@+id/tv_shocarselftype3_delete"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1" />
 
-                <TextView
-                    android:id="@+id/tv_shocarselftype3_count"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center" />
+                    <TextView
+                        android:id="@+id/tv_shocarselftype3_count"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center" />
 
+                    <TextView
+                        android:id="@+id/tv_shocarselftype3_add"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1" />
+                </LinearLayout>
                 <TextView
-                    android:id="@+id/tv_shocarselftype3_add"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
-            </LinearLayout>
+                    android:id="@+id/tv_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:textColor="#ac0000" />
+            </RelativeLayout>
+
         </RelativeLayout>
     </RelativeLayout>
 
