5月14日提交版本

--- a/app/src/main/res/layout/fragment_mainchildshopcar_accurate.xml
+++ b/app/src/main/res/layout/fragment_mainchildshopcar_accurate.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical">
 
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/relative_all">
@@ -102,22 +103,22 @@
         android:background="#fff"
         android:visibility="gone">
 
-        <CheckBox
-            android:id="@+id/cb_ly_shopcar_allselct"
+        <ImageView
+            android:id="@+id/iv_ly_shopcar_allselct"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:button="@drawable/selector_item_shopcar">
 
-        </CheckBox>
+        </ImageView>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="11dp"
-            android:layout_toRightOf="@+id/cb_ly_shopcar_allselct"
+            android:layout_toRightOf="@+id/iv_ly_shopcar_allselct"
             android:text="本月全选"
             android:textColor="#333333"
             android:textSize="18sp" />
