--- a/app/src/main/res/layout/fragment_slw_private_recommend.xml
+++ b/app/src/main/res/layout/fragment_slw_private_recommend.xml
@@ -37,15 +37,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/ll_bottom"
-        android:layout_below="@+id/rl_slw_private_recommend_history"
-        android:layout_marginBottom="10dp">
+        android:layout_below="@+id/rl_slw_private_recommend_history">
 
     </android.support.v7.widget.RecyclerView>
 
     <LinearLayout
         android:id="@+id/ll_bottom"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_above="@+id/tv_private_recommed_day"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
@@ -73,7 +72,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
         android:layout_marginTop="5dp"
         android:textSize="10sp" />
 
