--- a/app/src/main/res/layout/item_shocardetails_car.xml
+++ b/app/src/main/res/layout/item_shocardetails_car.xml
@@ -36,6 +36,7 @@
                     android:id="@+id/tv_item_lyshopcar_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:lines="1"
                     android:text="--"
                     android:textSize="18sp" />
 
@@ -46,6 +47,7 @@
                     android:layout_marginTop="5dp"
                     android:gravity="bottom"
                     android:text="--"
+                    android:lines="1"
                     android:textSize="14sp" />
             </LinearLayout>
 
