--- a/app/src/main/res/layout/fragment_slw_private_recommend.xml
+++ b/app/src/main/res/layout/fragment_slw_private_recommend.xml
@@ -45,6 +45,7 @@
         android:id="@+id/ll_bottom"
         android:layout_width="match_parent"
         android:layout_height="40dp"
+        android:layout_marginTop="5dp"
         android:layout_above="@+id/tv_private_recommed_day"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
