--- a/app/src/main/res/layout/activity_item_details.xml
+++ b/app/src/main/res/layout/activity_item_details.xml
@@ -26,8 +26,9 @@
 
     <ProgressBar
         android:id="@+id/pb_buy_loading"
+        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="match_parent"
-        android:layout_height="5dp"
+        android:layout_height="2dp"
         android:layout_below="@+id/rl_item_details_top"
         android:background="@color/back_ground_6e"
         android:visibility="gone" />
