--- a/app/src/main/res/layout/activity_order_form_details.xml
+++ b/app/src/main/res/layout/activity_order_form_details.xml
@@ -63,7 +63,6 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
                         android:layout_marginRight="11dp"
-                        android:text="-----"
                         android:textColor="#ac0000"
                         android:textSize="15sp" />
                 </RelativeLayout>
@@ -101,6 +100,8 @@
                                 android:id="@+id/tv_orderformdetails_servicetype"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:ellipsize="end"
+                                android:lines="1"
                                 android:text="-----"
                                 android:textColor="#666666"
                                 android:textSize="15sp" />
@@ -279,6 +280,15 @@
                     android:text="-----"
                     android:textColor="#333333"
                     android:textSize="15sp" />
+
+                <TextView
+                    android:id="@+id/tv_orderformdetails_managerphone"
+                    android:autoLink="phone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="9dp"
+                    android:textColor="#333333"
+                    android:textSize="15sp" />
             </LinearLayout>
 
             <RelativeLayout
@@ -295,7 +305,10 @@
                     android:id="@+id/tv_orderformdetails_button1"
                     android:layout_width="100dp"
                     android:layout_height="match_parent"
-                    android:background="@drawable/shape_buttonround_red"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:background="@drawable/shape_buttonround_gray"
+                    android:gravity="center"
                     android:textColor="#fff" />
 
                 <TextView
@@ -303,7 +316,8 @@
                     android:layout_width="100dp"
                     android:layout_height="match_parent"
                     android:layout_centerHorizontal="true"
-                    android:background="@drawable/shape_buttonround_red"
+                    android:background="@drawable/shape_buttonround_yellow"
+                    android:gravity="center"
                     android:textColor="#fff" />
 
                 <TextView
@@ -312,6 +326,7 @@
                     android:layout_height="match_parent"
                     android:layout_alignParentEnd="true"
                     android:background="@drawable/shape_buttonround_red"
+                    android:gravity="center"
                     android:textColor="#fff" />
 
             </RelativeLayout>
