--- a/app/src/main/res/layout/activity_see_car.xml
+++ b/app/src/main/res/layout/activity_see_car.xml
@@ -52,7 +52,8 @@
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
                         android:layout_margin="@dimen/distance_10"
-                        android:text="服饰名字"
+                        android:ellipsize="end"
+                        android:lines="1"
                         android:textSize="@dimen/text_size_17" />
 
                     <TextView
@@ -95,18 +96,14 @@
                             android:textSize="@dimen/text_size_16" />
                     </LinearLayout>
 
-                    <com.facebook.drawee.view.SimpleDraweeView
+                    <ImageView
                         android:id="@+id/sv_see_car_clothes_photo"
                         android:layout_width="70dp"
                         android:layout_height="70dp"
-                        android:layout_alignParentStart="true"
                         android:layout_alignTop="@+id/linearLayout"
                         android:layout_marginLeft="@dimen/distance_10"
                         android:layout_marginRight="@dimen/distance_10"
-                        fresco:actualImageScaleType="fitXY"
-                        fresco:placeholderImage="@mipmap/stand"
-                        fresco:placeholderImageScaleType="fitXY"
-                        fresco:roundedCornerRadius="4dp" />
+                        android:scaleType="centerCrop" />
                 </RelativeLayout>
 
                 <com.example.huichuanyi.custom.MyListView
