--- a/app/src/main/res/layout/item_orderformslw_state.xml
+++ b/app/src/main/res/layout/item_orderformslw_state.xml
@@ -32,13 +32,13 @@
                 android:id="@+id/tv_orderformslw_state"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignTop="@+id/tv_orderformslw_id"
+                android:layout_marginEnd="11dp"
                 android:layout_marginRight="11dp"
                 android:text="------"
                 android:textColor="#ac0000"
-                android:textSize="15sp"
-                android:layout_alignTop="@+id/tv_orderformslw_id"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="11dp" />
+                android:textSize="15sp" />
         </RelativeLayout>
 
         <TextView
@@ -59,6 +59,7 @@
                     android:id="@+id/iv_orderformslw_photo"
                     android:layout_width="91dp"
                     android:layout_height="91dp"
+                    android:scaleType="centerCrop"
                     android:layout_centerVertical="true"
                     android:src="@mipmap/stand" />
 
@@ -74,6 +75,8 @@
                         android:id="@+id/tv_orderformslw_servicetype"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:lines="1"
                         android:text="------"
                         android:textColor="#666666"
                         android:textSize="15sp" />
@@ -158,8 +161,8 @@
                 android:id="@+id/hs_ofderformslw_show"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentStart="true">
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true">
 
                 <LinearLayout
                     android:id="@+id/ll_ofderformslw_show"
@@ -183,6 +186,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
+                android:lines="1"
                 android:text="------"
                 android:textColor="#666666"
                 android:textSize="15sp" />
@@ -214,7 +218,7 @@
             android:layout_width="100dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@drawable/shape_buttonround_red"
+            android:background="@drawable/shape_buttonround_gray"
             android:gravity="center"
             android:textColor="#fff" />
 
@@ -224,7 +228,7 @@
             android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
             android:layout_weight="1"
-            android:background="@drawable/shape_buttonround_red"
+            android:background="@drawable/shape_buttonround_yellow"
             android:gravity="center"
             android:textColor="#fff" />
 
