--- a/app/src/main/res/layout/item_shocardetails_car.xml
+++ b/app/src/main/res/layout/item_shocardetails_car.xml
@@ -3,9 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="80dp"
     android:background="#fff"
-    android:padding="10dp"
     android:gravity="center_vertical"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:padding="10dp">
 
     <ImageView
         android:id="@+id/iv_item_ly_shopcar_singleShop"
@@ -30,12 +30,14 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_toLeftOf="@+id/tv_item_ly_shopcar_count"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/tv_item_lyshopcar_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:ellipsize="end"
                     android:lines="1"
                     android:text="--"
                     android:textSize="18sp" />
@@ -46,8 +48,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:gravity="bottom"
-                    android:text="--"
                     android:lines="1"
+                    android:text="--"
                     android:textSize="14sp" />
             </LinearLayout>
 
@@ -57,8 +59,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_marginRight="10dp"
-                android:text="x1" />
+                android:layout_marginRight="10dp" />
         </RelativeLayout>
 
     </RelativeLayout>
